fixed overflow content by removing left padding

--- a/src/App.scss
+++ b/src/App.scss
@@ -2,6 +2,7 @@
   background-color: var(--color-primary-bg);
   font-size: 62.5%;
   padding: unset 2rem !important;
+  padding-left: 0 !important;
 }
 
 .App::before {
